# happy-little-web-application

./: .gitignore  Cargo.toml
css/: custom.css
json/: app.json  content.json  server.json  site.json  ssl.json
src/: json.rs  main.rs  routes.rs
templates/: base.html.tera  index.html.tera
templates/cisco/: index.html.tera
templates/linux/: index.html.tera
