[package]
name = "website"
version = "0.1.0"
authors = ["Shane Sexton <discrete@tachyon.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.1.1"
actix-web = "2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tera = "1.3.0"
